--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta name="identifier-url" content="http://pixelangel.github.io/" />
+	<meta name="title" content="Amoy Nicholson Portfolio" />
+	<meta name="description" content="My Portfolio website" />
+	<meta name="abstract" content="My Portfolio website" />
+	<meta name="keywords" content="portfolio, blog, designer, web developer, html, css, javascript, graphic designer, blog, wordpress, non-profit web designer" />
+	<meta name="author" content="Amoy Nicholson" />
+	<meta name="revisit-after" content="15" />
+	<meta name="language" content="EN" />
+	<meta name="copyright" content="© 2015 Amoy Nicholson" />
+	<meta name="robots" content="All" />
+
+
+	<!-- Foundation Core CSS -->
+    <link rel="stylesheet" href="css/foundation.css" />
+
+    <!-- Custom CSS -->   
+	<link href="css/main.css" rel="stylesheet">
+
+    <script src="js/vendor/modernizr.js"></script>
+
+    
+	
+	
+	
+
+</head>
 <body>
 
 
 
-
+<nav>
 <div class="off-canvas-wrap" data-offcanvas>
   <div class="inner-wrap">
     <nav class="tab-bar">
@@ -46,6 +73,7 @@
   </div>
 </div>
 
+<nav>
 
 
 
@@ -53,7 +81,6 @@
 
 
 
-	
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
@@ -64,9 +91,15 @@
 
 
 
+	
+	<!--JAVASRIPY-->
 
+	<script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation.min.js"></script>
 
-
+    <script>
+      	$(document).foundation();
+    </script>
 
 </body>
 </html>
