index page update

--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html>
+<!--[if IE 9]><html class="lt-ie10" lang="en" > <![endif]-->
+<html class="no-js" lang="en" >
+
 <head>
+	<meta charset="utf-8">
+  	<!-- If you delete this meta tag World War Z will become a reality -->
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="identifier-url" content="http://pixelangel.github.io/" />
 	<meta name="title" content="Amoy Nicholson Portfolio" />
 	<meta name="description" content="My Portfolio website" />
@@ -14,8 +19,9 @@
 
 
 	<!-- Foundation Core CSS -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/foundation.css" />
-
+    
     <!-- Custom CSS -->   
 	<link href="css/main.css" rel="stylesheet">
 
