--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   	<!-- If you delete this meta tag World War Z will become a reality -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="identifier-url" content="http://pixelangel.github.io/" />
-	<meta name="title" content="Amoy Nicholson Portfolio" />
+	<meta name="title" content="Amoy Nicholson" />
 	<meta name="description" content="My Portfolio website" />
 	<meta name="abstract" content="My Portfolio website" />
 	<meta name="keywords" content="portfolio, blog, designer, web developer, html, css, javascript, graphic designer, blog, wordpress, non-profit web designer" />
@@ -35,7 +35,58 @@
 </head>
 <body>
 
-	<div class="off-canvas-wrap" data-offcanvas>
+	
+<div class="off-canvas-wrap" data-offcanvas>
+  <div class="inner-wrap">
+  <nav class="header"></nav>
+    <a class="right-off-canvas-toggle" href="#" >
+      <div class="menu">
+        <div class="top-bar"></div>
+        <div class="middle-bar"></div>
+        <div class="bottom-bar"></div>
+      </div>
+    </a>
+  </nav>
+    <!-- Off Canvas Menu -->
+    <aside class="right-off-canvas-menu">
+        <!-- whatever you want goes here -->
+        <ul class="side-nav main">
+          <li><a class="is-active" href="#">faster</a></li>
+          <li><a href="#">smarter</a></li>
+          <li><a href="#">easier</a></li>
+          <li><a href="#">all you</a></li>
+        </ul>
+        <ul class="side-nav secondary">
+          <li><a href="#">about us</a></li>
+          <li><a href="#">contact us</a></li>
+          <li><a href="#">press</a></li>
+          <li><a href="#">blog</a></li>
+        </ul>
+        <ul class="inline-list social">
+          <li><i class="fi-social-facebook"></i></li>
+          <li><i class="fi-social-pinterest"></i></li>
+          <li><i class="fi-social-youtube"></i></li>
+          <li><i class="fi-social-twitter"></i></li>
+        </ul>
+    </aside>
+      <section class="hero">
+        <img class="logo" src="https://s-media-cache-ak0.pinimg.com/736x/17/75/19/1775190f158a67c8af7309949353c58d.jpg" alt="logo" />
+      </section>
+    <!-- main content goes here -->
+    
+  <!-- close the off-canvas menu -->
+  <a class="exit-off-canvas"></a>
+
+  </div>
+</div>
+
+
+
+
+
+
+
+	<!--<div class="off-canvas-wrap" data-offcanvas>
 	  	<div class="inner-wrap">
 	    	<nav class="tab-bar">
 	      		<section class="left-small">
@@ -43,19 +94,17 @@
 	      		</section>
 
 	      		<section class="middle tab-bar-section">
-	        		<h1 class="title">Foundation</h1>
-	      		</section>
-
-	      		<section class="right-small">
-	        		<a class="right-off-canvas-toggle menu-icon" href="#"><span></span></a>
-	      		</section>
-	    	</nav>
+	        		<h1 class="title">Amoy Nicholson</h1>
+	      		</section>	    	
+	      	</nav>
 
 	    	<aside class="left-off-canvas-menu">
 	      		<ul class="off-canvas-list">
 	        		<li><label>Foundation</label></li>
 	        		<li><a href="#">The Psychohistorians</a></li>
-	       			<li><a href="#">...</a></li>
+	       			<li><a href="#">The Psychohistorians</a></li>
+	       			<li><a href="#">The Psychohistorians</a></li>
+	       			<li><a href="#">The Psychohistorians</a></li>
 	      		</ul>
 	    	</aside>
 
@@ -63,7 +112,7 @@
 	      		<!-- content goes here -->
 
 
-				<h1>Hello World</h1>
+			<!--	<h1>Hello World</h1>
 				<p>I'm hosted with GitHub Pages.</p>
 
 	    	</section>
@@ -72,22 +121,7 @@
 
 	  	</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-	
+-->
 	<!--JAVASRIPY-->
 
 	<script src="js/vendor/jquery.js"></script>
