update css and index

--- a/index.html
+++ b/index.html
@@ -52,15 +52,13 @@
         <!-- whatever you want goes here -->
         <ul class="side-nav main">
           <li><a class="is-active" href="#">faster</a></li>
-          <li><a href="#">smarter</a></li>
-          <li><a href="#">easier</a></li>
-          <li><a href="#">all you</a></li>
+          <li><a href="#">Logo</a></li>         
         </ul>
         <ul class="side-nav secondary">
-          <li><a href="#">about us</a></li>
-          <li><a href="#">contact us</a></li>
-          <li><a href="#">press</a></li>
-          <li><a href="#">blog</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
         <ul class="inline-list social">
           <li><i class="fi-social-facebook"></i></li>
