--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <!-- Custom CSS -->   
 	<link href="css/main.css" rel="stylesheet">
 
+	<!-- Fonts and Icons-->
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	
+
     <script src="js/vendor/modernizr.js"></script>
 
     
