laying out the layout

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<!-- Fonts and Icons-->
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-	
+
 
     <script src="js/vendor/modernizr.js"></script>
 
@@ -40,60 +40,69 @@
 <body>
 
 
-<div class="off-canvas-wrap" data-offcanvas>
-  <div class="inner-wrap">
-  <nav class="header"></nav>
-    <a class="right-off-canvas-toggle" href="#" >
-      <div class="menu">
-        <div class="top-bar"></div>
-        <div class="middle-bar"></div>
-        <div class="bottom-bar"></div>
-      </div>
-    </a>
-  </nav>
-    <!-- Off Canvas Menu -->
-    <aside class="right-off-canvas-menu">
-        <!-- whatever you want goes here -->
-        <ul class="side-nav main">
-          <li><a class="is-active" href="#">faster</a></li>
-          <li><a href="#">Logo</a></li>         
-        </ul>
-        <ul class="side-nav secondary">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <ul class="inline-list social">
-          <li><i class="fi-social-facebook"></i></li>
-          <li><i class="fi-social-pinterest"></i></li>
-          <li><i class="fi-social-youtube"></i></li>
-          <li><i class="fi-social-twitter"></i></li>
-        </ul>
-    </aside>
-      <section class="hero">
-        <img class="logo" src="https://s-media-cache-ak0.pinimg.com/736x/17/75/19/1775190f158a67c8af7309949353c58d.jpg" alt="logo" />
-      </section>
-    <!-- main content goes here -->
+	<div class="off-canvas-wrap" data-offcanvas>
+	  	<div class="inner-wrap">
+		  	<nav class="header"></nav>
+		    	<a class="right-off-canvas-toggle" href="#" >
+			      	<div class="menu">
+				        <div class="top-bar"></div>
+				        <div class="middle-bar"></div>
+				        <div class="bottom-bar"></div>
+			      	</div>
+		   		</a>
+		  	</nav>
+		    <!-- Off Canvas Menu -->
+		    <aside class="right-off-canvas-menu">
+		        <!-- whatever you want goes here -->
+		        <ul class="side-nav main">
+		          	<li><a class="is-active" href="#">faster</a></li>
+		          	<li><a href="#">Logo</a></li>         
+		        </ul>
+		        <ul class="side-nav secondary">
+		          	<li><a href="#">Home</a></li>
+		          	<li><a href="#">About</a></li>
+		          	<li><a href="#">Portfolio</a></li>
+		         	<li><a href="#">Contact</a></li>
+		        </ul>
+		        <ul class="inline-list social">
+		          	<li><i class="fa fa-facebook"></i></li>
+		          	<li><i class="fa fa-pinterest"></i></li>
+		          	<li><i class="fa fa-youtube"></i></li>
+		          	<li><i class="fa fa-twitter"></i></li>
+		        </ul>
+	    	</aside>
+	      	<section class="hero">
+	        	<img class="logo" src="https://s-media-cache-ak0.pinimg.com/736x/17/75/19/1775190f158a67c8af7309949353c58d.jpg" alt="logo" />
+	     	</section>
+
+
+	     	<section>
+	    	<!-- main content goes here -->
+	    		<div class="row">
+  					<div class="small-12 large-12 columns">
 
 
 
+						    Lorem ipsum dolor sit amet, quo nonumy constituto sadipscing at. Et vix atqui everti commodo. An est nonumy omittam voluptatum. Ex vel quot clita malorum, has graeco feugiat salutatus te. Qui ad exerci constituto. In his summo mollis vituperata.
 
-    Lorem ipsum dolor sit amet, quo nonumy constituto sadipscing at. Et vix atqui everti commodo. An est nonumy omittam voluptatum. Ex vel quot clita malorum, has graeco feugiat salutatus te. Qui ad exerci constituto. In his summo mollis vituperata.
+						Mel etiam iriure patrioque et. Autem illum salutatus eu vel, pro perfecto mediocritatem ei, eum alterum tacimates sententiae an. Nostrud persecuti cu usu, ex sit zril iisque mediocritatem. Vix ad doctus gloriatur expetendis. At homero malorum pri. Ea sale consetetur vim, ex nam justo error numquam.
 
-Mel etiam iriure patrioque et. Autem illum salutatus eu vel, pro perfecto mediocritatem ei, eum alterum tacimates sententiae an. Nostrud persecuti cu usu, ex sit zril iisque mediocritatem. Vix ad doctus gloriatur expetendis. At homero malorum pri. Ea sale consetetur vim, ex nam justo error numquam.
+						Justo qualisque id per, ipsum facete percipitur et eum, eam suas omnesque perfecto no. His ad natum patrioque maiestatis, ei mei accusata qualisque scribentur, ne malis possit oblique duo. Semper voluptua sed in, cu malis harum sea, no nec habeo labore. Per ad latine definitionem.
 
-Justo qualisque id per, ipsum facete percipitur et eum, eam suas omnesque perfecto no. His ad natum patrioque maiestatis, ei mei accusata qualisque scribentur, ne malis possit oblique duo. Semper voluptua sed in, cu malis harum sea, no nec habeo labore. Per ad latine definitionem.
+						Has at movet dicant offendit. Est sumo aliquam assentior ad, malorum deserunt scribentur his ei. An docendi fabellas euripidis cum. Propriae scaevola cu eam, his id dolorum deleniti. Ut mentitum scaevola reprimique mea, mel te decore semper, dico sanctus nec et. His ut oratio tantas.
 
-Has at movet dicant offendit. Est sumo aliquam assentior ad, malorum deserunt scribentur his ei. An docendi fabellas euripidis cum. Propriae scaevola cu eam, his id dolorum deleniti. Ut mentitum scaevola reprimique mea, mel te decore semper, dico sanctus nec et. His ut oratio tantas.
+						Sea errem constituto no, vim nominavi deserunt no. Ei vim scripta aliquam. Est an nostro mentitum. At velit percipit vix, qui ex aeque nobis, eum placerat persecuti ne.
+						 
+					</div>
+				</div>
+			</section>
 
-Sea errem constituto no, vim nominavi deserunt no. Ei vim scripta aliquam. Est an nostro mentitum. At velit percipit vix, qui ex aeque nobis, eum placerat persecuti ne.
-    
-  <!-- close the off-canvas menu -->
-  <a class="exit-off-canvas"></a>
 
-  </div>
-</div>
+	  		<!-- close the off-canvas menu -->
+	  		<a class="exit-off-canvas"></a>
+
+  		</div>
+	</div>
 
 
 
