--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
 
 	<nav>
 		<div data-magellan-expedition="fixed">
-
-			 <ul class="sub-nav">
-			 	<li data-magellan-arrival="hero"><a href="#hero" class="active">Amoy Nicholson</a></li>
+			<ul class="sub-nav">
+			 	<li data-magellan-arrival="home"><a href="#home" class="active">Amoy Nicholson</a></li>
 			 	<ul class="sub-menu right">			
 					<li data-magellan-arrival="home"><a href="#home">Home</a></li>
 					<li data-magellan-arrival="about"><a href="#about">About</a></li>
@@ -50,19 +49,33 @@
 	</nav>
 
 
-	<header class="hero" id="hero">
+	<header class="home" id="home">
 		<div class="overlay">
 			<div class="row">
-				<img class="logo" src="https://s-media-cache-ak0.pinimg.com/736x/17/75/19/1775190f158a67c8af7309949353c58d.jpg" alt="logo" />
-			</div>
-		</div>
+				
+				<div class="content-wrap text-center">					
+					<!--<img class="logo" src="https://s-media-cache-ak0.pinimg.com/736x/17/75/19/1775190f158a67c8af7309949353c58d.jpg" alt="logo" />-->
+					ADD LOGO			
+					<h1>HI ! I’M AMOY NICHOLSON, A DEVELOPER AND DESIGNER FROM THE CARIBBEAN AND THIS IS MY PORTFOLIO</h1>
+				</div><!--end class="content-wrap"-->	
+			</div><!--end class="row"-->
+		</div><!--end class="overlay"-->
 	</header>
 
-	<div class="content">
-		<section id="home">
+	<div class="mainContent">
+		<section id="about">
 			<div class="row">
   				<div class="small-12 large-12 columns">
+Passionate about Web Design, Mobile and Print, I present here my main creations made during my studies.
 
+VIEW MY RESUME
+Play a beautiful Football DISCOVER FIFA 16
+Enjoy your life with movies DISCOVER CINEMAP
+Move. Without breaking the bank DISCOVER SLENCE
+Innovative & Healthcare DISCOVER OUISKIN
+The show must go on! DISCOVER JARRING EFFECTS
+Nespresso. What else ? Nespay. DISCOVER NESPAY
+You like what I do, or you want to know 
 						    Lorem ipsum dolor sit amet, quo nonumy constituto sadipscing at. Et vix atqui everti commodo. An est nonumy omittam voluptatum. Ex vel quot clita malorum, has graeco feugiat salutatus te. Qui ad exerci constituto. In his summo mollis vituperata.
 
 						Mel etiam iriure patrioque et. Autem illum salutatus eu vel, pro perfecto mediocritatem ei, eum alterum tacimates sententiae an. Nostrud persecuti cu usu, ex sit zril iisque mediocritatem. Vix ad doctus gloriatur expetendis. At homero malorum pri. Ea sale consetetur vim, ex nam justo error numquam.
@@ -132,7 +145,10 @@
 	    	<div class="row">
   					<div class="small-12 large-12 columns">
 
+You like what I do, or you want to know more about me?
+No problem, just send me an email!
 
+GET IN TOUCH
 
 						    Lorem ipsum dolor sit amet, quo nonumy constituto sadipscing at. Et vix atqui everti commodo. An est nonumy omittam voluptatum. Ex vel quot clita malorum, has graeco feugiat salutatus te. Qui ad exerci constituto. In his summo mollis vituperata.
 
@@ -149,6 +165,14 @@
 
 
 </section>
+	<footer>
+		&copy; 2015 - Portfolio Amoy Nicholson. All rights reserved
+
+
+
+	</footer>
+
+</div><!--end class="mainContent"-->
 	<!--JAVASRIPY-->
 
 	<script src="js/vendor/jquery.js"></script>
