--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<!-- Fonts and Icons-->
 	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet">
-
+	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700|Montserrat+Alternates:400,700|Montaga|Lato:400,300,300italic,700,700italic,400italic,900,900italic,100italic' rel='stylesheet' type='text/css'>
 
     <script src="js/vendor/modernizr.js"></script>
 
@@ -51,8 +51,7 @@
 
 	<header class="home" id="home">
 		<div class="overlay">
-			<div class="row">
-				
+			<div class="row">				
 				<div class="content-wrap text-center">					
 					<!--<img class="logo" src="https://s-media-cache-ak0.pinimg.com/736x/17/75/19/1775190f158a67c8af7309949353c58d.jpg" alt="logo" />-->
 					ADD LOGO			
@@ -166,7 +165,8 @@ GET IN TOUCH
 
 </section>
 	<footer>
-		&copy; 2015 - Portfolio Amoy Nicholson. All rights reserved
+	
+		&copy; <script>document.write(new Date().getFullYear())</script> - Portfolio Amoy Nicholson. All rights reserved
 
 
 
